src/test/ui/single-use-lifetime/one-use-in-inherent-method-argument.stderr
error: lifetime parameter `'a` only used once
  --> $DIR/one-use-in-inherent-method-argument.rs:12:19
   |
LL |     fn inherent_a<'a>(&self, data: &'a u32) { //~ ERROR `'a` only used once
   |                   ^^                -- ...is used only here
   |                   |
   |                   this lifetime...
   |
note: lint level defined here
  --> $DIR/one-use-in-inherent-method-argument.rs:1:9
   |
LL | #![deny(single_use_lifetimes)]
   |         ^^^^^^^^^^^^^^^^^^^^
help: elide the single-use lifetime
   |
LL |     fn inherent_a(&self, data: &u32) { //~ ERROR `'a` only used once
   |                 --             --

error: lifetime parameter `'f` only used once
  --> $DIR/one-use-in-inherent-method-argument.rs:11:6
   |
LL | impl<'f> Foo<'f> { //~ ERROR `'f` only used once
   |      ^^      -- ...is used only here
   |      |
   |      this lifetime...

error: aborting due to 2 previous errors

